# libvldmail

./: .gitignore  .travis.yml  CHANGES  CMakeLists.txt  COPYING  README.md  autotest-cases  test.c  validate_email.3
.github/: FUNDING.yml
.github/workflows/: cmake-single-platform.yml
contrib/: libvldmail.i
src/: vldmail.c  vldmail.h
